// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserListPage renders error 1`] = `
<div
  className="mt-5 mb-5"
>
  <div
    className="row justify-content-center text-danger"
  >
    <h5>
      An error has occured, please reload the application
    </h5>
  </div>
</div>
`;

exports[`UserListPage renders loader 1`] = `
<div
  className="mt-5 mb-5"
>
  <div
    className="row justify-content-center"
  >
    loading users...
  </div>
</div>
`;

exports[`UserListPage renders table 1`] = `
<div>
  <h3>
    Users
  </h3>
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          First Name
        </th>
        <th>
          Last Name
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Jack
        </td>
        <td>
          Johnson
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
